# WinCore

./: CMakeLists.txt  Future.txt
Config/: WinCoreConfig.cmake.in
Src/Core/: Platform.cpp  Platform.hpp  WinClass.cpp  WinClass.hpp  WinDef.hpp
Src/Utils/: Convertor.hpp
