cmake_minimum_required(VERSION 3.20)
project(WinCore VERSION 1.0.0 LANGUAGES C CXX)
set(WIN_CORE_LIBRARY WinCore)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

set(
    WINCORE_INCLUDE_DIR 
        ${CMAKE_CURRENT_SOURCE_DIR}/Src/Core
        ${CMAKE_CURRENT_SOURCE_DIR}/Src/Utils
)

set(CORE_DOR ${CMAKE_CURRENT_SOURCE_DIR}/Src/Core)
set(UTILS_DOR ${CMAKE_CURRENT_SOURCE_DIR}/Src/Utils)

set(
    WINCORE_HEADERS
        ${CORE_DOR}/WinDef.hpp
        ${CORE_DOR}/WinClass.hpp
        ${UTILS_DOR}/StringConvertor.hpp
)

add_library(${WIN_CORE_LIBRARY} STATIC ${WINCORE_HEADERS})
target_include_directories(${WIN_CORE_LIBRARY} PUBLIC ${WINCORE_INCLUDE_DIR})
add_library(WinCore::WinCore ALIAS ${WIN_CORE_LIBRARY})

set_target_properties(
    ${WIN_CORE_LIBRARY} PROPERTIES
    CXX_STANDARD 20
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
    C_STANDARD 17
    C_STANDARD_REQUIRED ON
    C_EXTENSIONS OFF
)

include(GNUInstallDirs)
target_include_directories(
    ${WIN_CORE_LIBRARY} PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Src>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

install(
    TARGETS ${WIN_CORE_LIBRARY}
    EXPORT WinCoreTargets
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(
    FILES ${WINCORE_HEADERS}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${WIN_CORE_LIBRARY}
)

install(
    EXPORT WinCoreTargets
    FILE WinCoreTargets.cmake
    NAMESPACE WinCore::
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${WIN_CORE_LIBRARY}
)

include(CMakePackageConfigHelpers)

configure_package_config_file(
    ${CMAKE_CURRENT_LIST_DIR}/config/WinCoreConfig.cmake.in
    ${CMAKE_CURRENT_BINARY_DIR}/WinCoreConfig.cmake
    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${WIN_CORE_LIBRARY}
)

configure_package_config_file(
    ${CMAKE_CURRENT_LIST_DIR}/config/WinCore.pc.in
    ${CMAKE_CURRENT_BINARY_DIR}/WinCore.pc
    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
)

install(
    FILES ${CMAKE_CURRENT_BINARY_DIR}/WinCoreConfig.cmake
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${WIN_CORE_LIBRARY}
)

install(
    FILES ${CMAKE_CURRENT_BINARY_DIR}/${WIN_CORE_LIBRARY}.pc
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
)